--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,15 +30,22 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    viewBinding { enabled = true }
 }
 
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.8.0'
+    // updated 20230511 13:25
+    implementation 'androidx.core:core-ktx:1.10.1' // updated
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.9.0' // updated
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.3'
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'androidx.fragment:fragment-ktx:1.5.7' // L5, 0.37.00 needed for .. by viewModels
+    implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'androidx.core:core-ktx:1.10.1'
     testImplementation 'junit:junit:4.13.2'
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1"
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
