--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.AndroidAdvanced"
         tools:targetApi="31">
         <activity
+            android:name=".home.HeroActivity"
+            android:exported="false"/>
+        <activity
             android:name=".login.LoginActivity"
             android:exported="true">
             <intent-filter>
