--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,10 @@ dependencies {
     implementation("com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.3")
 //    implementation("com.squareup.retrofit2:converter-scalars:2.1.0")
 
+    // Room DB
+    implementation 'androidx.room:room-runtime:2.5.1'
+    annotationProcessor 'androidx.room:room-compiler:2.5.1'
+
     // testing
     testImplementation("com.squareup.okhttp3:mockwebserver:4.2.1")
     testImplementation("com.google.truth:truth:1.0") //Alternativa: HAMCREST
