--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id "kotlin-kapt" // added for Room
 }
 
 android {
@@ -24,11 +25,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17 // was VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_17 // was VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17' // was 1.8
     }
     viewBinding { enabled = true }
 }
@@ -54,14 +55,17 @@ dependencies {
 //    implementation("com.squareup.retrofit2:converter-scalars:2.1.0")
 
     // Room DB
-    implementation 'androidx.room:room-runtime:2.5.1'
-    annotationProcessor 'androidx.room:room-compiler:2.5.1'
+//    implementation 'androidx.room:room-runtime:2.5.1'
+//    annotationProcessor 'androidx.room:room-compiler:2.5.1'
+    implementation("androidx.room:room-runtime:2.5.1") // fm class
+    implementation("androidx.room:room-ktx:2.5.1") // fm class
+    kapt("androidx.room:room-compiler:2.5.1") // fm class
 
     // testing
     testImplementation("com.squareup.okhttp3:mockwebserver:4.2.1")
     testImplementation("com.google.truth:truth:1.0") //Alternativa: HAMCREST
     testImplementation 'junit:junit:4.13.2'
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
