--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,22 +23,22 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true // was false before
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17 // was VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_17 // was VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '17' // was 1.8
+        jvmTarget = '17'
     }
     viewBinding { enabled = true }
 }
 
 dependencies {
-    // updated 20230511 13:25
+    // updated 20230511 13:25, 20230527 16:57
     implementation 'androidx.core:core-ktx:1.10.1' // updated
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0' // updated
